<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="my_profile_activity_app_name" tools:ignore="Typos">Assignment1</string>
    <string name="my_profile_activity_log_out">Log out</string>
    <string name="my_profile_activity_settings">Settings</string>
    <string name="my_profile_activity_go_settings_tip">Go to settings and fill out the profile</string>
    <string name="my_profile_activity_edit_profile">Edit profile</string>
    <string name="my_profile_activity_view_my_contacts">View my contacts</string>
    <string name="auth_activity_fill_out_the_profile_tip">Fill out the profile and go to the application!</string>
    <string name="auth_activity_email" translatable="false">E-mail</string>
    <string name="auth_activity_password">Password</string>
    <string name="auth_activity_remember_me">Remember me</string>
    <string name="auth_activity_register">Register</string>
    <string name="auth_activity_terms_and_conditions">By clicking Register you agree to our
        Terms \nand Conditions</string>
    <string name="auth_activity_already_have_an_account">Already have an account?</string>
    <string name="auth_activity_sing_in">Sing in</string>
    <string name="auth_activity_google" translatable="false">Google</string>
    <string name="auth_activity_or">or</string>
    <string name="auth_activity_lets_get_acquainted">Let\'s get acquainted</string>
    <string name="text_validation_success" translatable="false">validation success</string>
    <string name="text_validation_error_empty_field">Please, fill empty field!</string>
    <string name="text_validation_error_email">Please, enter correct email!</string>
    <string name="text_validation_error_min_pass_length">"Password must have at least 8 characters "</string>
    <string name="text_validation_error_max_pass_length">Password must have maximum 24 characters</string>
    <string name="text_validation_error_contain_invalid_characters">Password must contains only A-Z,  a-z, numbers or special characters</string>
    <string name="text_validation_error_needs_specified_characters">Password must contains at least one character of each type: A-Z,  a-z, numbers and special characters</string>
    <string name="career" translatable="false">Career</string>
    <string name="home_address" translatable="false">Home address</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="linkedin" translatable="false">linkedin</string>
    <string name="instagram" translatable="false">instagram</string>
    <string name="item_contact_delete_contact">delete contact</string>
    <string name="item_contact_name_surname">Name Surname</string>
    <string name="item_contact_career">Career</string>
    <string name="contacts_activity_contacts">Contacts</string>
    <string name="contacts_activity_back">back</string>
    <string name="contacts_activity_search">search\n</string>
    <string name="contacts_activity_add_contacts">Add contacts</string>
    <string name="search">search</string>
    <string name="add_contact_image">add contact image</string>
    <string name="save">save</string>
    <string name="username">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="email_address_hint" translatable="false">name@gmail.com</string>
    <string name="phone_hint">(264)–654–3762</string>
    <string name="undo" translatable="false">UNDO</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="permission_not_granted">Permission Not Granted</string>


</resources>