<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <RelativeLayout
        android:id="@+id/group_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/auth_primary_margin"
        android:layout_marginTop="145dp">

        <TextView
            android:id="@+id/textView_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/auth_secondary_margin"
            android:text="@string/auth_activity_lets_get_acquainted"

            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/textView_tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_label1"
            android:layout_centerHorizontal="true"
            android:text="@string/auth_activity_fill_out_the_profile_tip"

            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnPrimary" />
    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/group_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_labels"
        android:layout_margin="@dimen/auth_primary_margin"
        android:layout_marginTop="@dimen/auth_tertiary_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField_email"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_activity_email"
            app:boxBackgroundColor="?attr/colorPrimary"
            app:boxStrokeColor="?attr/colorOutline"
            app:hintTextAppearance="?attr/textAppearanceLabelSmall"
            app:hintTextColor="?attr/colorOutline">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceLabelSmall"
                android:textColor="?attr/colorOutline" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField_password"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/filledTextField_email"
            android:hint="@string/auth_activity_password"
            app:boxBackgroundColor="?attr/colorPrimary"
            app:boxStrokeColor="?attr/colorOutline"
            app:hintTextAppearance="?attr/textAppearanceLabelSmall"
            app:hintTextColor="?attr/colorOutline">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceLabelSmall"
                android:textColor="?attr/colorOutline" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            style="@style/Widget.App.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filledTextField_password"
            android:layout_marginTop="7dp"
            android:text="@string/auth_activity_remember_me"
            android:textAppearance="?attr/textAppearanceLabelSmall"
            android:textColor="?attr/colorOutline" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/group_bottomViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/auth_primary_margin"
        android:layout_marginBottom="@dimen/my_profile_primary_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_singInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/auth_google"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textColor="@color/black"
            app:cornerRadius="6dp" />

        <TextView
            android:id="@+id/textView_orLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_singInGoogle"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="@dimen/auth_secondary_margin"
            android:text="@string/auth_or"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            style="@style/Assignment1.BorderedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_orLabel"
            android:paddingVertical="12dp"
            android:text="@string/auth_activity_register"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnPrimary"
            app:strokeColor="?attr/colorSecondary" />

        <TextView
            android:id="@+id/textView_termsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_register"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="@dimen/auth_secondary_margin"
            android:gravity="center_horizontal"
            android:text="@string/auth_activity_terms_and_conditions"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnPrimary" />


        <LinearLayout
            android:id="@+id/group_haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_termsAndConditions"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_activity_already_have_an_account"
                android:textAppearance="?attr/textAppearanceLabelSmall"
                android:textColor="?attr/colorOutline" />

            <TextView
                android:id="@+id/textView_SingIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/auth_activity_sing_in"
                android:textAppearance="?attr/textAppearanceLabelSmall"
                android:textColor="?attr/colorOnPrimary" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>