<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView_contactImage"
            android:layout_width="@dimen/item_contact_contact_image_size"
            android:layout_height="@dimen/item_contact_contact_image_size"
            android:contentDescription=""
            android:scaleType="centerCrop"
            android:src="@drawable/default_contact_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_contact_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_contact_textView_contact_name_surname_margin_start"
            android:lines="1"
            android:text="@string/item_contact_name_surname"
            android:textAppearance="@style/TextAppearance.Assignment1.LabelLarge"
            android:textColor="@color/dark_gray"
            app:layout_constraintBottom_toTopOf="@id/textView_contact_career"
            app:layout_constraintEnd_toStartOf="@id/trash"
            app:layout_constraintStart_toEndOf="@id/imageView_contactImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView_contact_career"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/item_contact_career"
            android:textAppearance="@style/TextAppearance.Assignment1.BodyMedium"
            android:textColor="@color/text_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/trash"
            app:layout_constraintStart_toStartOf="@id/textView_contact_full_name"
            app:layout_constraintTop_toBottomOf="@id/textView_contact_full_name" />

        <ImageButton
            android:id="@+id/trash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/item_contact_delete_contact"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_trash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
